<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.3</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.patrykdankowski</groupId>
    <artifactId>FinanceFlock</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>FinanceFlock - root</name>
    <description>FinanceFlock App</description>
    <properties>
        <java.version>21</java.version>
    </properties>
    <modules>
        <module>monolith</module>
        <module>application</module>
        <module>adapters</module>
        <module>domain</module>
        <module>infrastructure</module>
    </modules>
    <packaging>pom</packaging>

</project>
